# uart_test

./: CMakeLists.txt  LICENSE  README.md  uart_test_desktop.cmake
Inc/: ring_buf.h  uart.h
Src/: ring_buf.c  uart.c
i386_Tests/Inc/: main.h  uart_test.h
i386_Tests/Src/: main.c
i386_Tests/Src/Tests/: uart_test.c
